--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,16 @@
     <string name="text_error">Terjadi kesalahan</string>
     <string name="text_retry">Coba lagi</string>
     <string name="text_data_not_found">Data tidak ditemukan</string>
+    <string name="text_sign_in">Masuk</string>
+    <string name="text_or">Atau</string>
+    <string name="text_sign_in_google">Masuk dengan Google</string>
+    <string name="text_sign_in_fb">Masuk dengan Facebook</string>
+    <string name="text_forgot_password">Lupa Password</string>
+    <string name="text_username_email">Username or Email</string>
+    <string name="text_password">Password</string>
+    <string name="text_login">Login</string>
+    <string name="text_login_finger_print">Masuk dengan Fingerprint</string>
+    <string name="text_dont_have_account">Belum punya akun?</string>
+    <string name="text_register">Daftar sekarang</string>
+    <string name="text_not_yet_implemented">Fitur belum diimplementasi</string>
 </resources>
