--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="text_dont_have_account">Belum punya akun?</string>
     <string name="text_register">Daftar sekarang</string>
     <string name="text_not_yet_implemented">Fitur belum diimplementasi</string>
+    <string name="text_error_login_field">Username dan password wajib diisi</string>
 </resources>
